<resources>
    <string name="app_name">WWR</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_walk_screen">WalkScreenActivity</string>
    <string name="daily_activity_routes_button">ROUTES</string>
    <string name="daily_activity_start_button">START</string>
    <string name="daily_activity_title_text">DAILY ACTIVITY</string>
    <string name="daily_activity_steps">STEPS: </string>
    <string name="daily_activity_distance">DISTANCE: </string>
    <string name="daily_activity_empty_value">0</string>
    <string name="intentional_walk">LAST INTENTIONAL WALK</string>
    <string name="last_walk_time">TIME: </string>
    <string name="title_activity_ask_height_">AskHeight_Activity</string>
    <string name="title_activity_add_member">AddMemberActivity</string>
    <string name="title_activity_propose_walk">ProposeWalkActivity</string>
    <string name="title_activity_invite_screen">InviteScreenActivity</string>
</resources>
