...
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="97dp"
        android:layout_height="50dp"
        android:text="CONFIRM"
        android:textSize="15dp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
...
